--- a/notebook.ipynb
+++ b/notebook.ipynb
@@ -166,7 +166,7 @@
    "metadata": {},
    "source": [
     "These last charts show the _distribution_ of the dataset.\n",
-    "If for whatever reason we want to compute the uncertainty of the average, turns out that Seaborn actually does that for barcharts for some reason:"
+    "If for whatever reason we want to compute the uncertainty of the average, turns out that Seaborn actually does that for barcharts:"
    ]
   },
   {
@@ -221,9 +221,45 @@
     "\n",
     "Where $\\bar{x}$ is the mean and $\\sigma$ is the standard deviation, a.k.a. the square root of the variance. I don't think this formula is super important to remember, but I think it's somewhat useful to remember that the _size of the confidence interval is inversely related to the square root of the number of samples._ For instance, this is useful when you're running an A/B test – if you want to detect a 1% difference then you need something on the order of $0.01^{-2} = 10,000$ samples.\n",
     "\n",
-    "More things here\n",
-    "1. Beta distribution\n",
-    "2. Bootstrapping"
+    "Let's compute this ourselves and split it (rather than relying on Seaborn):"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 132,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# code here..."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "I mentioned earlier that the formula for confidence interval only applies under some mild assumptions. What are those? It's the assumption of _normality_. For a large number of observations, this is nothing to worry about, and this is due to the [central limit theorem](https://en.wikipedia.org/wiki/Central_limit_theorem).\n",
+    "\n",
+    "There's one particular case of non-normality that I think is worth remembering. Consider the case when you're measuring something like a \"conversion rate\" – $k$ out of $n$ converted. Using the \"off the shelf\" formula for confidence intervals, you might get weird ones that go below 0% or above 100%. The confidence interval of a \"$k$ out of $n$\" scenario is much better handled using a [Beta distribution](https://en.wikipedia.org/wiki/Beta_distribution). I've personally benefitted from memorizing the formula for the confidence interval and think I probably use it more than the previous (Normal based) one. In particular all you need to remember is"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "scipy.stats.ppf([0.025, 0.975], n, n-k)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "This will compute a 95% confidence interval if you plug in values for $n$ and $k$.\n",
+    "\n",
+    "## Bootstrapping\n",
+    "\n",
+    "Another approach that can be useful is bootstrapping. It allows you do compute the same statistics without memorizing any formulas."
    ]
   },
   {
